@@ -1,6 +1,6 @@
 depth = ../../..
 
-examples=romanze-op28-2
+examples=
 LOCALSTEPMAKE_TEMPLATES=ly mutopia
 
 include $(depth)/make/stepmake.make
